--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,16 +19,19 @@ jobs:
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: directbloom-docs/package-lock.json
 
       - name: Install dependencies
         run: npm ci
+        working-directory: directbloom-docs
       - name: Build website
         run: npm run build
+        working-directory: directbloom-docs
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: build
+          path: directbloom-docs/build
 
   deploy:
     name: Deploy to GitHub Pages
