--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -19,8 +19,11 @@ jobs:
         with:
           node-version: 20
           cache: npm
+          cache-dependency-path: directbloom-docs/package-lock.json
 
       - name: Install dependencies
         run: npm ci
+        working-directory: directbloom-docs
       - name: Test build website
         run: npm run build
+        working-directory: directbloom-docs
